--- a/google_homepage.html
+++ b/google_homepage.html
@@ -4,31 +4,41 @@
     <link rel="stylesheet" type="text/css" href="google_homepage.css"> 
   </head>
   <body>
-    <div class="nav">
+    <nav>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="//plus.google.com">+Erik</a></li>
+        <li><a href="//gmail.com">Mail</a></li>
+        <li><a href="//images.google.com">Images</a></li>
+        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/apps.png" align="center"></a></li>
+        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/bell.png" align="center"></a></li>
+        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/photo.png" align="center"></a></li>
       </ul>
-    </div>
-    <div class="main">
-      <h1>Google</h1>
-      <div class="form">
-        
+    </nav>
+    <section>
+      <img src="img/google.png"></img>
+      <br>
+      <br>
+        <form>
+          <div class="mic">
+            <span class="mic"><input type="textbox"></input><img src="img/Mic.png" align="center" height="20px" width="15px"></span>
+          </div>
+            
+        </form>
+    </section>
+    <footer>
+      <div class="footer-left">
+        <ul>
+          <li>Advertising</li>
+          <li>Business</li>
+          <li>About</li>
+        </ul>
       </div>
-    </div>
-    <div class="footer-left">
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="footer-right">
-      <ul>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
+      <div class="footer-right">
+        <ul>
+          <li>Privacy & Terms</li>
+          <li>Settings</li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
