--- a/google_homepage.html
+++ b/google_homepage.html
@@ -9,9 +9,9 @@
         <li><a href="//plus.google.com">+Erik</a></li>
         <li><a href="//gmail.com">Mail</a></li>
         <li><a href="//images.google.com">Images</a></li>
-        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/apps.png" align="center"></a></li>
-        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/bell.png" align="center"></a></li>
-        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/photo.png" align="center"></a></li>
+        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/apps.png" align="center"/></a></li>
+        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/bell.png" align="center"/></a></li>
+        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/photo.png" class="circle" align="center"/></a></li>
       </ul>
     </nav>
     <section>
