Edit to comply with css standards

--- a/google_homepage.html
+++ b/google_homepage.html
@@ -1,3 +1,5 @@
+<!-- TODO: Change erikvandewater.com to linkedin. -->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -11,13 +13,12 @@
         <li><a href="//images.google.com">Images</a></li>
         <li><a class="nav-image" href="//erikvandewater.com"><img src="img/apps.png" align="center"/></a></li>
         <li><a class="nav-image" href="//erikvandewater.com"><img src="img/bell.png" align="center"/></a></li>
-        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/photo.png" class="circle" align="center"/></a></li>
+        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/36px.jpg" class="circle" align="center"/></a></li>
       </ul>
     </nav>
     <section>
       <img src="img/google.png"></img>
-      <br>
-      <br>
+      <br><br>
         <form>
           <div class="mic">
             <span class="mic"><input type="textbox"></input><img src="img/Mic.png" align="center" height="20px" width="15px"></span>
