Change .mic div to .search-bar

--- a/google_homepage.html
+++ b/google_homepage.html
@@ -20,8 +20,8 @@
       <img src="img/google.png"></img>
       <br><br>
         <form>
-          <div class="mic">
-            <span class="mic"><input type="textbox"></input><img src="img/Mic.png" align="center" height="20px" width="15px"></span>
+          <div class="search-bar">
+            <span class="mic  "><input type="textbox"></input><img src="img/Mic.png" align="center" height="20px" width="15px"></span>
           </div>
             
         </form>
