--- a/google_homepage.html
+++ b/google_homepage.html
@@ -21,7 +21,8 @@
       <br><br>
         <form>
           <div class="search-bar">
-            <span class="mic  "><input type="textbox"></input><img src="img/Mic.png" align="center" height="20px" width="15px"></span>
+            <input type="textbox" autofocus></input>
+            <span class="mic  "><img src="img/Mic.png" align="center" height="20px" width="15px"></span>
           </div>
             
         </form>
