--- a/google_homepage.html
+++ b/google_homepage.html
@@ -4,6 +4,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="google_homepage.css"> 
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <nav>
