Make all links point to erikvdw.github.io

--- a/google_homepage.html
+++ b/google_homepage.html
@@ -4,20 +4,20 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="google_homepage.css"> 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https:https://erikvdw.github.io/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="//plus.google.com">+Erik</a></li>
-        <li><a href="//gmail.com">Mail</a></li>
-        <li><a href="//images.google.com">Images</a></li>
-        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/apps.png" align="center"/></a></li>
-        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/bell.png" align="center"/></a></li>
-        <li><a class="nav-image" href="//erikvandewater.com"><img src="img/36px.jpg" class="circle" align="center"/></a></li>
+        <li><a href="https://erikvdw.github.io" target = "_blank">+Erik</a></li>
+        <li><a href="https://erikvdw.github.io" target = "_blank">Mail</a></li>
+        <li><a href="https://erikvdw.github.io" target = "_blank">Images</a></li>
+        <li><a class="nav-image" href="https://erikvdw.github.io" target = "_blank"><img src="img/apps.png" align="center"/></a></li>
+        <li><a class="nav-image" href="https://erikvdw.github.io" target = "_blank"><img src="img/bell.png" align="center"/></a></li>
+        <li><a class="nav-image" href="https://erikvdw.github.io" target = "_blank"><img src="img/36px.jpg" class="circle" align="center"/></a></li>
       </ul>
     </nav>
-    <section>
+    <section class = "search">
       <img src="img/google.png"></img>
       <br><br>
         <form>
@@ -27,6 +27,13 @@
           </div>
             
         </form>
+    </section>
+    <br>
+    <section class = "buttons">
+      <button id = "google-search">Google Search</button>
+      &nbsp;
+      <button id = "im-feeling-lucky">I'm Feeling Lucky</button>
+
     </section>
     <footer>
       <div class="footer-left">
